examples/lambda-function-url/packages/api/errors/index.ts
import UnauthenticatedError from './UnauthenticatedError'
import UserInputError from './UserInputError'
import NotFoundError from './NotFoundError'
import BadRequestError from './BadRequestError'

export {
  UnauthenticatedError,
  UserInputError,
  BadRequestError,
  NotFoundError,
}
